--- a/app/views/posts.html
+++ b/app/views/posts.html
@@ -2,10 +2,16 @@
 
   <div class="post row" ng-repeat="(postId, post) in posts">
     <div class="col-xs-1">
+      <div class="vote up"><span ng-hide="downVoted(post)" ng-click="upVotePost(postId, upVoted(post))">▲</span></div>
 
+      <div class="vote down"><span ng-hide="upVoted(post)" ng-click="downVotePost(postId, downVoted(post))">▼</span></div>
     </div>
     <div class="col-md-9 col-xs-11">
-
+      <div>
+        <span>{{ post.score || 0 }} votes</span>
+        &mdash;
+        <span>submitted by <a href="#/users/{{ post.owner }}">{{ post.owner }}</a></span>
+      </div>
       <div class="info">
         <a href="{{ post.url }}">
           {{ post.title }}
